<resources>
    <string name="app_name">JEDDAH ATTRACTIONS</string>
    <string name="facebook_app_id">202726053622168</string>
    <string name="fb_login_protocol_scheme">fb202726053622168</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="explore">Explore</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="directory">Directory</string>
    <string name="topEvents">TOP EVENTS THIS WEEK</string>
    <string name="exploreJeddah">EXPLORE JEDDAH</string>
    <string name="title_categories">CATEGORIES FOR YOU</string>
    <string name="title_all_venues">ALL VENUES IN JEDDEH</string>
    <string name="nearbyEvents">NEAR BY EVENTS</string>
    <string name="allevents">ALL</string>
    <string name="todayEvents">TODAY</string>
    <string name="ThisWeekEvents">THIS WEEK</string>
    <string name="NearByEvents">NEAR BY</string>
    <string name="getDirections">Get Directions</string>
    <string name="buyNow">BUY NOW</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Hala Fikom!</string>
    <string name="paragraph">Jeddah attractions app welcome youYour City Guide in Jeddah &amp; soon cross the Kingdom!</string>
    <string name="register">REGISTER</string>
    <string name="signin">SIGN IN</string>
    <string name="googleplus">GOOGLE +</string>
    <string name="facebook">FACEBOOK</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="username">Username</string>
    <string name="emailAdress">Email Address</string>
    <string name="mobileNumber">Mobile Number (Optional)</string>
    <string name="join">JOIN NOW</string>
    <string name="buynow">Buy Now</string>
    <string name="personalInfo">PERSONAL INFO</string>
    <string name="name">NAME</string>
    <string name="emailaddress">EMAIL ADDRESS</string>
    <string name="mobilenumber">MOBILE NUMBER</string>
    <string name="nationalId">NATIONAL ID</string>
    <string name="paymentMethod">PAYMENT METHOD</string>
    <string name="choosePayment">Choose the payment method</string>
    <string name="suitsYou">that suits you</string>
    <string name="creditCard">Credit Card</string>
    <string name="cash">Cash on delivery</string>
    <string name="payLater">Pay later</string>
    <string name="maxTickets">Max Tickets</string>
    <string name="unlimited">Unlimited</string>
    <string name="next">NEXT</string>
    <string name="checkOut">Checkout</string>
    <string name="cancel">CANCEL</string>
    <string name="event">EVENT</string>
    <string name="change">CHANGE</string>
    <string name="pickEventDay">PICK EVENT DAY</string>
    <string name="vip">VIP</string>
    <string name="vipSubtitle">Lasdhasdhasjkdhas , asdasdass ,asdasasd ,asdasdasdsa ,asdasdas ,asdasdas ,asdasdasdasdasdasdasdasdas ,asdasdas</string>
    <string name="regSubtitle">Lasdhasjdhasjkdhasjkdhasjkdhajkshjk ,asdiasdauishdus ,asdasudayhsus ,asdyausdayus ,asdasyduaisya ,asdasudyuas</string>
    <string name="regular">Regural</string>
    <string name="hint">Hint :</string>
    <string name="total">TOTAL</string>
    <string name="done">DONE</string>
    <string name="ticketsType">TICKETS TYPE</string>
    <string name="numberTickets">NUMBER OF TICKETS</string>
    <string name="ViewOrEditProfile">View or edit Profile</string>
    <string name="orderNumber">ORDER NUMBER</string>
    <string name="orderStatus">ORDER STATUS</string>
    <string name="upcomingEvents">UPCOMING EVENTS</string>
    <string name="pastEvents">PAST EVENTS</string>
    <string name="description">DESCRIPTION</string>
    <string name="noevents">NO ITEMS IN YOUR HISTORY</string>
    <string name="noLikedEvents">NO LIKED EVENTS FOUND</string>
    <string name="comingSoon">COMING SOON</string>
    <string name="Events">EVENTS</string>
    <string name="venues">VENUES</string>
    <string name="attractions">ATTRACTIONS</string>
    <string name="want_to_know">Want to know all</string>
    <string name="your_nearby">YOUR NEAR BY EVENTS</string>
    <string name="allowLocation">ALLOW LOCATION ACCESS</string>
    <string name="nothingScheduled">NOTHING SCHEDULED YET</string>
    <string name="thankyou">THANK YOU</string>
    <string name="paymentDone">Payment done successfully. Thank you for booking through Jeddah Attractions</string>
    <string name="bookMore">BOOK MORE FOR SAME EVENT</string>
    <string name="bookMoreAttractions">BOOK MORE FOR SAME ATTRACTION</string>
    <string name="sponspored">SPONSORED</string>
    <string name="topSpots">TOP SPOTS IN JEDDAH</string>
    <string name="nearbyVenues">NEAR BY VENUES</string>
    <string name="topSpotsInJeddah">TOP SPOTS IN JEDDAH</string>
    <string name="categoriesForYou">CATEGORIES FOR YOU</string>
    <string name="allVenuesInJeddeh">ALL VENUES IN JEDDEH</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photos">PHOTOS</string>
    <string name="verification">Verification</string>
    <string name="enterVerification">ENTER VERIFICATION CODE</string>
    <string name="textMsg">A text message with code  was sent to your phone</string>
    <string name="resend">RESEND</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="changePassword">CHANGE PASSWORD</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="gender">GENDER</string>
    <string name="newPassword">NEW PASSWORD</string>
    <string name="retypePass">RETYPE PASSWORD</string>
    <string name="update">UPDATE</string>
    <string name="all">ALL</string>
    <string name="eventsCap">EVENTS</string>
    <string name="venuesCap">VENUES</string>
    <string name="attractionsCap">ATTRACTIONS</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear all</string>
    <string name="month">MONTH</string>
    <string name="filterBy">FILTER BY</string>
    <string name="weeklySuggestions">Weekly sugesstions</string>
    <string name="NearBy">Near By</string>
    <string name="categories">CATEGORIES</string>
    <string name="filterEvents">FILTER EVENTS</string>
    <string name="filterVenues">FILTER VENUES</string>
    <string name="filterAttraction">FILTER ATTRACTIONS</string>
    <string name="attractionsForu">ATTRACTIONS FOR YOU</string>
    <string name="nearByAttractions">NEAR BY ATTRACTIONS</string>
    <string name="settings">Settings</string>
    <string name="notification">Notifications Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="contactUs">Contact Us</string>
    <string name="subject">Subject</string>
    <string name="message">Message here..</string>
    <string name="send">SEND</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednsday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="pickAdate">PICK TIME</string>
    <string name="attraction">ATTRACTION</string>
    <string name="dateTime"><![CDATA[DATE & TIME]]></string>
    <string name="ticketAddOns">TICKET ADD ONS</string>
    <string name="search">search</string>
    <string name="venuesSmall">Venues</string>
    <string name="searchIn">Search in Jeddah Attractions</string>
    <string name="allAttractions">ATTRACTIONS FOR YOU</string>
    <string name="allAttactionsJeddah">ALL ATTRACTIONS IN JEDDAH</string>
    <string name="logout">Log out</string>
    <string name="aboutDescription">asdasjkdhajsdhjashdjkashdjakshdjkashdjkashdjkashdjkashdjkashdjkashkdja asdhajskdhasjkdhasjkdhajksdhasjkdh asldjaskldjaskldjaskl askdjaklsdjaskl askdjalskdjalk askdjaskldja askdjaklsdjklasjdklasjdlkasjdlkajsdkljaskldjaklsdjkalsjdkasjdklasjdklajsdklajsldkjaskldajl \\n asdaklsdjkasjdklasdjkasdjaksdja \\n asdklaskdlasklda</string>
    <string name="reset">Forget Password</string>
    <string name="code">GET CODE</string>
    <string name="succes">Success</string>
    <string name="login">Login now</string>
    <string name="data_required">Data required</string>
    <string name="fill_data">You need to fill all data</string>
    <string name="connection">No data connection</string>
    <string name="profile_image">You can\'t set your profile image</string>
    <string name="failure">Failure</string>
    <string name="ok">Ok</string>
    <string name="login_required">Login required</string>
    <string name="login_feature">You must be logged in to add this item to your favorites</string>
    <string name="event_date_required">you must select a date for the event</string>
    <string name="event_ticket_required">you must select a ticket for the event</string>
    <string name="enable_location">please enable location</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="take_screen_shot">Take screen shot</string>
    <string name="id_card">Save your id card?</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="NOADDONS">No AddOns</string>
    <string name="tickets">My Tickets</string>
    <string name="liked_events">Liked Events</string>
    <string name="liked_directory">Liked Directory</string>
    <string name="error_like">You must be logged in to add this item to your favorites</string>
    <string name="open_now">Open Now</string>
    <string name="closed_now">Closed Now</string>
    <string name="hours">Hours </string>
    <string name="web_site">Web Site</string>
    <string name="phone">Phone</string>
    <string name="reset_error">Can\'t Reset Password</string>
    <string name="code_enter">Code</string>
    <string name="change_lang">Change Language</string>
    <string name="change_lang_msg">This change will restart your app</string>
    <string name="noLikedDirectories">No Liked Directories Found</string>
    <string name="your_nearby_attractions">YOUR NEAR BY ATTRACTIONS</string>
    <string name="your_nearby_venues">YOUR NEAR BY VENUES</string>
    <string name="enter_mail">please enter your email</string>
    <string name="enter_pass">please enter your password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="not_valid_email">Email doesn\'t exist</string>
    <string name="postal_address">POSTAL ADDRESS</string>
    <string name="telephone">TELEPHONE</string>
    <string name="call">CALL</string>
    <string name="email_contact">EMAIL</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="web_site_contact">WEBSITE</string>
    <string name="socail">SOCIAL PLATFORMS</string>
    <string name="location_intro"><![CDATA[CHECK ALL NEAR BY VENUES, EVENTS & ATTRACTIONS]]></string>
    <string name="location_intro_subtitle">With near by feature you can know all places around you and with one click you will be there</string>
    <string name="calendar_intro"><![CDATA[BOOK YOUR EVENTS\' TICKETS]]></string>
    <string name="calendar_intro_subtitle">Concerts and big events endless in Jeddah over the year. Book your set now and enjoy through Jeddah attractions app</string>
    <string name="attraction_intro"><![CDATA[EXPLORE ALL ATTRACTIONS & BOOK TICKETS]]></string>
    <string name="font_book">"fonts/gotham_book.otf"</string>
    <string name="font_medium">"fonts/gotham_medium.otf"</string>
    <string name="font_bold">"fonts/gotham_bold.otf"</string>
</resources>