<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:id="@+id/image"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/intro_map"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/title"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/lightBlack"
        fontPath="@string/font_bold"
        tools:ignore="MissingPrefix"
        android:text="@string/location_intro"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/subtitle"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textColor="@color/outerText"
        fontPath="@string/font_book"
        tools:ignore="MissingPrefix"
        android:text="@string/location_intro_subtitle"/>

</LinearLayout>