<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/lightBlack"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:id="@+id/title_container"
        android:background="@drawable/payment_bg">

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/static_title_size"
        android:layout_alignBaseline="@+id/next"
        android:layout_alignBottom="@+id/next"
        android:layout_centerHorizontal="true"
        android:text="@string/signin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="7"
            android:id="@+id/linearLayout2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/sunday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/monday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/tuesday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/wednsday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/thursday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/friday"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/gotham_medium"
                android:textColor="@color/white"
                android:text="@string/saturday"/>

        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fillViewport="true"
        android:layout_below="@+id/title_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/calendarContainer"
            android:background="@drawable/ic_payment_bg"
            android:orientation="vertical">

            <com.spade.ja.ui.widget.JACalendarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calendar_1"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>


        </LinearLayout>

    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:visibility="gone"
        android:id="@+id/timeContainer"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/staticTitle"
            android:id="@+id/pickTime"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:fontFamily="@font/gotham_medium"
            android:text="@string/pickAdate"/>
        <com.spade.ja.ui.widget.StaticGridView
            android:gravity="center"
            android:id="@+id/timeGrid"
            android:layout_below="@+id/pickTime"
            android:layout_marginTop="11dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="2"
            android:listSelector="#00000000"
            android:layout_alignStart="@+id/pickTime"
            android:columnWidth="180dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="spacingWidthUniform"/>
    </RelativeLayout>

</RelativeLayout>