<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/loading_overlay" android:visibility="gone"/>

    <TextView
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="22dp"
        fontPath="@string/font_medium"
        tools:ignore="MissingPrefix"
        android:text="@string/clear"
        android:textColor="@color/lightBlack"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clear"
        android:layout_alignBottom="@+id/clear"
        android:layout_centerHorizontal="true"
        fontPath="@string/font_medium"
        tools:ignore="MissingPrefix"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textSize="@dimen/filter_size" />

    <RelativeLayout
        android:id="@+id/filterContainer"
        android:layout_below="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/loginContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="70dp">

                    <TextView
                        android:id="@+id/filterBy"
                        style="@style/TitleTheme"
                        fontPath="@string/font_bold"
                        tools:ignore="MissingPrefix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/background"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/filterBy" />

                    <RelativeLayout
                        android:id="@+id/weeklyContainer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filterBy"
                        android:padding="20dp">

                        <LinearLayout
                            android:id="@+id/weeklySugg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/tag_rect"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:layout_weight="1"
                                fontPath="@string/font_book"
                                tools:ignore="MissingPrefix"
                                android:text="@string/weeklySuggestions"
                                android:id="@+id/weekly_sugg_txt"
                                android:textColor="@color/lightBlack" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/nearBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@+id/weeklySugg"
                            android:background="@drawable/tag_rect"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="2dp"
                                android:layout_weight="1"
                                fontPath="@string/font_book"
                                tools:ignore="MissingPrefix"
                                android:text="@string/NearBy"
                                android:id="@+id/nearby_text"
                                android:textColor="@color/lightBlack" />

                        </LinearLayout>


                    </RelativeLayout>

                    <TextView
                        android:id="@+id/cats"
                        style="@style/TitleTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/weeklyContainer"
                        android:background="@color/background"
                        fontPath="@string/font_book"
                        tools:ignore="MissingPrefix"
                        android:padding="@dimen/activity_horizontal_margin"
                        android:text="@string/categories" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/gridview"
                        android:layout_width="match_parent"
                        android:layout_below="@+id/cats"
                        android:layout_margin="10dp"
                        android:layout_height="match_parent" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorTitle"
            fontPath="@string/font_bold"
            tools:ignore="MissingPrefix"
            android:padding="20dp"
            android:text="@string/filterVenues"
            android:textColor="@color/white"
            android:textSize="@dimen/titleSize" />
    </RelativeLayout>
</RelativeLayout>