<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:padding="10dp">

    <CheckBox
        android:id="@+id/vipCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        fontPath="@string/font_medium"
        tools:ignore="MissingPrefix"
        android:text="@string/vip"
        android:buttonTint="@color/colorTitle"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/static_title_size" />

    <TextView
        android:id="@+id/ticketDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vipCheckbox"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_alignStart="@id/vipCheckbox"
        android:layout_toStartOf="@+id/vipPrice"
        fontPath="@string/font_book"
        tools:ignore="MissingPrefix"
        android:text="@string/vipSubtitle"
        android:textColor="@color/outerText"
        android:textSize="@dimen/daysRemaining" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/vipCheckbox"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/vipCheckbox"
        android:layout_marginEnd="18dp"
        fontPath="@string/font_medium"
        tools:ignore="MissingPrefix"
        android:gravity="bottom"
        android:text="SAR"
        android:textSize="@dimen/cash" />

    <TextView
        android:id="@+id/vipPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView40"
        android:layout_alignTop="@+id/textView40"
        android:layout_marginTop="8dp"
        android:layout_toStartOf="@+id/textView40"
        fontPath="@string/font_medium"
        tools:ignore="MissingPrefix"
        android:gravity="center"
        android:text="250"
        android:textSize="@dimen/static_title_size" />
</RelativeLayout>