<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <include
        layout="@layout/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/lightBlack"
    android:id="@+id/loginContainer"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/skip"
        android:textColor="@color/google"
        android:textSize="@dimen/titleSize" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_bold"
        android:textColor="@color/white"
        android:textSize="@dimen/static_title_size"
        android:layout_alignBaseline="@+id/skip"
        android:layout_alignBottom="@+id/skip"
        android:layout_centerHorizontal="true"
        android:text="@string/signin" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView6"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="82dp"
        android:ems="10"
        app:backgroundTint="@color/white"
        android:inputType="textEmailAddress" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/email"
        android:layout_alignEnd="@id/email"
        android:layout_below="@+id/email"
        app:backgroundTint="@color/white"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignStart="@id/email"
        android:layout_alignEnd="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/rounded_rectangle_green"
        android:text="@string/signin"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/gotham_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize"
        android:text="@string/forgetPassword" />

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/forgetPassword"
        android:layout_alignStart="@+id/forgetPassword"
        android:layout_below="@+id/forgetPassword"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/gotham_medium"
        android:gravity="center"
        android:text="@string/join"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/titleSize" />
</RelativeLayout>
</LinearLayout>